--- a/morning_espresso.html
+++ b/morning_espresso.html
@@ -13,7 +13,8 @@
                 background-color: #f4f4f4;
             }
             .container {
-                max-width: 800px;
+                width: 100%;
+                max-width: none;
                 background: white;
                 padding: 20px;
                 border-radius: 8px;
