Update: Morning Espresso HTML generiert

--- a/morning_espresso.html
+++ b/morning_espresso.html
@@ -13,8 +13,7 @@
                 background-color: #f4f4f4;
             }
             .container {
-                width: 100%;
-                max-width: none;
+                max-width: 850px;
                 background: white;
                 padding: 20px;
                 border-radius: 8px;
