Update: Morning Espresso HTML generiert

--- a/morning_espresso.html
+++ b/morning_espresso.html
@@ -13,11 +13,12 @@
                 background-color: #f4f4f4;
             }
             .container {
-                max-width: 850px;
+                width: 100%;
+                max-width: none;
                 background: white;
-                padding: 20px;
-                border-radius: 8px;
-                box-shadow: 0 0 10px rgba(0,0,0,0.1);
+                padding: 0px;
+                border-radius: 0px;
+                box-shadow: none;
             }
             h1, h2 {
                 color: #333;
