--- a/morning_espresso.html
+++ b/morning_espresso.html
@@ -8,9 +8,9 @@
         <style>
             body {
                 font-family: Arial, sans-serif;
-                margin: 20px;
+                margin: 0px;
                 padding: 0;
-                background-color: #f4f4f4;
+                background-color: transparent;
             }
             .container {
                 width: 100%;
